--- a/Dualog.Shared/Dualog.Shared.nuspec
+++ b/Dualog.Shared/Dualog.Shared.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Dualog.Naf.Portable</id>
+    <id>Dualog.Shared.Portable</id>
     <version>$version$</version>
     <title>$title$</title>
     <authors>Alexander Hanssen</authors>
