--- a/Dualog.Shared/Dualog.Shared.csproj
+++ b/Dualog.Shared/Dualog.Shared.csproj
@@ -117,7 +117,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Dualog.Naf.nuspec" />
+    <None Include="Dualog.Shared.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ReferenceTables\ErrorCodes.txt" />
