--- a/Dualog.Shared.Full/Dualog.Shared.Full.csproj
+++ b/Dualog.Shared.Full/Dualog.Shared.Full.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A87A1054-9CBB-4C4C-98F9-9B3A1BC99FE1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dualog.Naf</RootNamespace>
-    <AssemblyName>Dualog.Naf</AssemblyName>
+    <RootNamespace>Dualog.Shared</RootNamespace>
+    <AssemblyName>Dualog.Shared</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
