--- a/Dualog.Shared/Dualog.Shared.csproj
+++ b/Dualog.Shared/Dualog.Shared.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{391DF61C-65B4-44BC-83A2-E060DBC2C490}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dualog.Naf</RootNamespace>
-    <AssemblyName>Dualog.Naf</AssemblyName>
+    <RootNamespace>Dualog.Shared</RootNamespace>
+    <AssemblyName>Dualog.Shared</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
