--- a/Dualog.Shared/project.lock.json
+++ b/Dualog.Shared/project.lock.json
@@ -105,6 +105,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Collections.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Diagnostics.Debug/4.0.11": {
@@ -116,6 +119,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Diagnostics.Debug.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Diagnostics.Tools/4.0.1": {
@@ -127,6 +133,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Diagnostics.Tools.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Globalization/4.0.11": {
@@ -138,6 +147,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Globalization.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.IO/4.1.0": {
@@ -151,6 +163,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.IO.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Linq/4.1.0": {
@@ -161,6 +176,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Linq.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Linq.Expressions/4.1.0": {
@@ -171,6 +189,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Linq.Expressions.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Net.Primitives/4.0.11": {
@@ -182,6 +203,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Net.Primitives.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.ObjectModel/4.0.12": {
@@ -191,6 +215,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.ObjectModel.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Reflection/4.1.0": {
@@ -204,6 +231,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Reflection.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Reflection.Extensions/4.0.1": {
@@ -216,6 +246,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Reflection.Extensions.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Reflection.Primitives/4.0.1": {
@@ -227,6 +260,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Reflection.Primitives.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Resources.ResourceManager/4.0.1": {
@@ -240,6 +276,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Resources.ResourceManager.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Runtime/4.1.0": {
@@ -250,6 +289,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Runtime.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp80+wpa81/_._": {}
         }
       },
       "System.Runtime.Extensions/4.1.0": {
@@ -261,6 +303,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Runtime.Extensions.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Text.Encoding/4.0.11": {
@@ -272,6 +317,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Text.Encoding.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Text.Encoding.Extensions/4.0.11": {
@@ -284,6 +332,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Text.Encoding.Extensions.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Text.RegularExpressions/4.1.0": {
@@ -293,6 +344,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Text.RegularExpressions.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Threading/4.0.11": {
@@ -303,6 +357,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Threading.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Threading.Tasks/4.0.11": {
@@ -314,6 +371,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Threading.Tasks.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Xml.ReaderWriter/4.0.11": {
@@ -326,6 +386,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Xml.ReaderWriter.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       },
       "System.Xml.XDocument/4.0.11": {
@@ -337,6 +400,9 @@
         },
         "compile": {
           "ref/netstandard1.0/System.Xml.XDocument.dll": {}
+        },
+        "runtime": {
+          "lib/portable-net45+win8+wp8+wpa81/_._": {}
         }
       }
     }
@@ -2047,7 +2113,11 @@
       "NETStandard.Library": "1.6.0"
     },
     "frameworks": {
-      "netstandard1.0": {}
+      "netstandard1.0": {
+        "imports": [
+          "portable-net45+win8+wp8+wpa81"
+        ]
+      }
     }
   }
 }
