--- a/Dualog.Shared/project.json
+++ b/Dualog.Shared/project.json
@@ -8,5 +8,7 @@
     "netstandard1.0": {
       "imports": "portable-net45+win8+wpa81+wp8"
     }
-  }
+  },
+  "authors": [ "Alexander Hanssen", "Jonas Follesø" ],
+  "description": "Library with methods and classes shared for Dualog projects, originated from eCatch."
 }
