Using one netstandard1.4 lib instead of 2 libs

--- a/Dualog.Shared.Tests/Dualog.Shared.Tests.csproj
+++ b/Dualog.Shared.Tests/Dualog.Shared.Tests.csproj
@@ -8,12 +8,13 @@
     <ProjectGuid>{062E4591-78D0-4378-8DF4-9951445A1BD2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dualog.Naf.Tests</RootNamespace>
-    <AssemblyName>Dualog.Naf.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>Dualog.Shared.Tests</RootNamespace>
+    <AssemblyName>Dualog.Shared.Tests</AssemblyName>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -64,16 +65,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Dualog.Shared\Dualog.Shared.csproj">
-      <Project>{391df61c-65b4-44bc-83a2-e060dbc2c490}</Project>
-      <Name>Dualog.Shared</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Dualog.Shared\Dualog.Shared.csproj">
+      <Project>{92522581-a1dd-468c-ac02-c062fbe005d8}</Project>
+      <Name>Dualog.Shared</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
