--- a/Dualog.Shared/Dualog.Shared.csproj
+++ b/Dualog.Shared/Dualog.Shared.csproj
@@ -31,4 +31,15 @@
     <EmbeddedResource Include="ReferenceTables\Zones.txt" />
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)'=='net40' OR '$(TargetFramework)'=='net45' OR '$(TargetFramework)'=='net46'">
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)'=='net45' OR '$(TargetFramework)'=='net46'">
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+  </ItemGroup>
+
 </Project>
