--- a/Dualog.eCatch.Shared/Dualog.eCatch.Shared.csproj
+++ b/Dualog.eCatch.Shared/Dualog.eCatch.Shared.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard1.0;netstandard1.1;netstandard1.2;netstandard2.0;net462;net471</TargetFrameworks>
-    <PackageId>Dualog.Shared</PackageId>
+    <PackageId>Dualog.eCatch.Shared</PackageId>
     <PackageVersion>1.0.0.12</PackageVersion>
     <Authors>Alexander Hanssen</Authors>
     <Description>Classes and methods used for Dualog native apps and web apps.</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReleaseNotes></PackageReleaseNotes>
-    <Copyright>Copyright 2017 (c) Dualog</Copyright>
+    <Copyright>Copyright 2018 (c) Dualog</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
