Starts with summary for all messages. Adds new project to contain shared language resources.

--- a/Dualog.eCatch.Shared/Dualog.eCatch.Shared.csproj
+++ b/Dualog.eCatch.Shared/Dualog.eCatch.Shared.csproj
@@ -32,4 +32,8 @@
     <EmbeddedResource Include="ReferenceTables\tools.txt" />
     <EmbeddedResource Include="ReferenceTables\Zones.txt" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Dualog.eCatch.Shared.Language\Dualog.eCatch.Shared.Language.csproj" />
+  </ItemGroup>
 </Project>
