--- a/Dualog.eCatch.Shared/Dualog.eCatch.Shared.csproj
+++ b/Dualog.eCatch.Shared/Dualog.eCatch.Shared.csproj
@@ -34,6 +34,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dualog.eCatch.Shared.Language\Dualog.eCatch.Shared.Language.csproj" />
+    <Compile Update="Language\Translations.Designer.cs">
+      <DependentUpon>Translations.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Language\Translations.resx">
+      <LastGenOutput>Translations.Designer.cs</LastGenOutput>
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
