--- a/Dualog.eCatch.Shared/Dualog.eCatch.Shared.csproj
+++ b/Dualog.eCatch.Shared/Dualog.eCatch.Shared.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.0;netstandard1.1;netstandard1.2;netstandard2.0;net471</TargetFrameworks>
+    <TargetFrameworks>netstandard1.0;netstandard1.1;netstandard1.2;netstandard2.0;netstandard2.1;net471</TargetFrameworks>
     <PackageId>Dualog.eCatch.Shared</PackageId>
-    <PackageVersion>2.0.0.39</PackageVersion>
+    <PackageVersion>2.0.0.63</PackageVersion>
     <Authors>Alexander Hanssen</Authors>
     <Description>Classes and methods used for Dualog native apps and web apps.</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
